[MSE] Failures on W3C media-source tests regarding MIME types https://bugs.webkit.org/show_bug.cgi?id=146499

Reviewed by Eric Carlson.

Source/WebCore:

Tests: http/tests/media/media-source/SourceBuffer-abort-readyState.html
       http/tests/media/media-source/SourceBuffer-abort-removed.html
       http/tests/media/media-source/SourceBuffer-abort-updating.html
       http/tests/media/media-source/SourceBuffer-abort.html

Multiple failures in the W3C media-source test suite due to two failures in isTypeSupported MIME type handling:
- MIME types without codec strings were being rejected.
- MIME types with codec strings which are rejected by the system are being reported as supported.

For the first, stop rejecting MIME types with non-existent codec strings. For MIME types which do have non-empty
codec strings, treat a "Maybe" response as unsupported.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::isTypeSupported):

LayoutTests:

Import four new tests from the w3c test suite <https://github.com/w3c/web-platform-tests.git>.

* http/tests/media/media-source/SourceBuffer-abort-readyState.html: Added.
* http/tests/media/media-source/SourceBuffer-abort-removed.html: Added.
* http/tests/media/media-source/SourceBuffer-abort-updating.html: Added.
* http/tests/media/media-source/SourceBuffer-abort.html: Added.
* http/tests/media/white.mp4: Added.
* http/tests/media/white.webm: Added.
* platform/mac/TestExpectations:
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-expected.txt: Added.
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-readyState-expected.txt: Added.
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-removed-expected.txt: Added.
* platform/mac/http/tests/media/media-source/SourceBuffer-abort-updating-expected.txt: Added.
* platform/mac/http/tests/media/media-source/mediasource-is-type-supported-expected.txt: Added.


Canonical link: https://commits.webkit.org/164596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186177 268f45cc-cd09-0410-ab3c-d52691b4dbfc